put in nav and welcome

--- a/hello_world.html
+++ b/hello_world.html
@@ -8,7 +8,16 @@
 </head>
 
 <body>
-    Hello world!
+    <nav>
+        <ul>
+            <li>Home</li>
+            <li>Registration Form</li>
+            <li>Fake Blog</li>
+        </ul>
+    </nav>
+    <section>
+        <h1>Welcome Home!</h1>
+    </section>
 </body>
 
 </html>
