--- a/blog.html
+++ b/blog.html
@@ -4,19 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Fundamentals | HTML</title>
+    <title>HTML | Blog</title>
 </head>
 
 <body>
     <nav>
         <ul>
-            <li>Home</li>
-            <li>Registration Form</li>
-            <li>Fake Blog</li>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="registration.html">Registration Form</a></li>
+            <li><a href="blog.html">Fake Blog</a></li>
         </ul>
     </nav>
     <section>
-        <h1>Welcome Home!</h1>
+        <h1>Blog it Up!</h1>
     </section>
 </body>
 
