added form elments and styled

--- a/home.html
+++ b/home.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML | Home</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style/0_base.css">
+    <link rel="stylesheet" type="text/css" href="style/1_nav.css">
+    <link rel="stylesheet" type="text/css" href="style/2_form.css">
 </head>
 
 <body>
