added blog html

--- a/blog.html
+++ b/blog.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML | Blog</title>
-    <link rel="stylesheet" type="text/css" href="style/0_base.css">
+    <!-- <link rel="stylesheet" type="text/css" href="style/0_base.css">
     <link rel="stylesheet" type="text/css" href="style/1_nav.css">
-    <link rel="stylesheet" type="text/css" href="style/2_form.css">
+    <link rel="stylesheet" type="text/css" href="style/2_form.css"> -->
 </head>
 
 <body>
@@ -18,7 +18,73 @@
         </ul>
     </nav>
     <section>
-        <h1>Blog it Up!</h1>
+        <h1>Michael Jordan</h1>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/b/b3/Jordan_Lipofsky.jpg" alt="MJ pic">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est non itaque dolor laboriosam inventore nostrum a
+            molestias nihil, quisquam, veniam, modi sit saepe error. Quibusdam incidunt eveniet sit dolore ea non dolor
+            veritatis tenetur dicta!</p>
+        <table style="border: 1px solid black;">
+            <tbody>
+                <tr>
+                    <th>Year</th>
+                    <th>PPG</th>
+                    <th>MVP</th>
+                </tr>
+                <tr>
+                    <td>1990-91</td>
+                    <td>31.5</td>
+                    <td>Yes</td>
+                </tr>
+                <tr>
+                    <td>1991-92</td>
+                    <td>30.1</td>
+                    <td>Yes</td>
+                </tr>
+                <tr>
+                    <td>1992-93</td>
+                    <td>32.6</td>
+                    <td>No</td>
+                </tr>
+                <tr>
+                    <td>1995-96</td>
+                    <td>30.4</td>
+                    <td>Yes</td>
+                </tr>
+                <tr>
+                    <td>1996-97</td>
+                    <td>29.6</td>
+                    <td>No</td>
+                </tr>
+                <tr>
+                    <td>1997-98</td>
+                    <td>28.7</td>
+                    <td>Yes</td>
+                </tr>
+            </tbody>
+        </table>
+        <ul>
+            <li>1984 - 1993 Chicago Bulls</li>
+            <li>1985 - 1998 Chicago Bulls</li>
+            <li>2001 - 2003 Chicago Bulls</li>
+        </ul>
+
+        <a href="https://www.youtube.com/watch?v=4Scbk21_BM8">Click for Awesome Highlight Video</a>
+
+        <h2>Please take this short survey</h2>
+        <label>Email:<input type="email" name="email"></label>
+        <br>
+        <label><input type="radio" name="confirm">Yes, please send me lots of emails</label>
+        <label><input type="radio" name="reject">No, please do not send me any emails</label>
+        <br>
+        <p>How did you hear about us?</p>
+        <label><input type="checkbox" name="Facebook">Facebook</label>
+        <br>
+        <label><input type="checkbox" name="Newspaper">Newspaper</label>
+        <br>
+        <label><input type="checkbox" name="Referral">Referral</label>
+        <br>
+        <input type="submit" name="Submit" value="Submit">
+
     </section>
 </body>
 
